--- a/Presentacion/WebUI/appsettings.json
+++ b/Presentacion/WebUI/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionString": {
+    "DefaultConnection": "Filename=D:\\dbs\\jblog.db"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
